--- a/Evaluate_eq.ipynb
+++ b/Evaluate_eq.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,12 +149,12 @@
     "    \n",
     "    fld_data = {} # data dictionary\n",
     "    print(\"Getting fields... \")\n",
-    "    fld_data['E1'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD/part_e1/', n_start, n_end, n_skip)\n",
-    "    fld_data['E2'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD/part_e2/', n_start, n_end, n_skip)\n",
-    "    fld_data['E3'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD/part_e3/', n_start, n_end, n_skip)\n",
+    "    fld_data['E1'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD\\part_e1\\\\'[:-1], n_start, n_end, n_skip)\n",
+    "    fld_data['E2'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD\\part_e2\\\\'[:-1], n_start, n_end, n_skip)\n",
+    "    fld_data['E3'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD\\part_e3\\\\'[:-1], n_start, n_end, n_skip)\n",
     "    #fld_data['B1'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD/part_b1/', n_start, n_end, n_skip)\n",
-    "    fld_data['B2'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD/part_b2/', n_start, n_end, n_skip)\n",
-    "    fld_data['B3'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD/part_b3/', n_start, n_end, n_skip)\n",
+    "    fld_data['B2'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD\\part_b2\\\\'[:-1], n_start, n_end, n_skip)\n",
+    "    fld_data['B3'], dt, dx, t_arr, x_arr = get_osiris_quantity_1d(base_dir + 'FLD\\part_b3\\\\'[:-1], n_start, n_end, n_skip)\n",
     "\n",
     "    print('time step = ', dt)\n",
     "    print('spatial resolution = ', dx)\n",
@@ -169,11 +169,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting fields... \n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] O sistema não conseguiu localizar o caminho especificado: '\\\\\\\\wsl$\\\\Ubuntu-22.04\\\\home\\\\duarte-alex3\\\\osiris-dev_2\\\\osiris-dev\\\\MS\\\\FLD\\\\part_AA'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m base_dir \u001b[38;5;241m=\u001b[39m base_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mwsl$\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUbuntu-22.04\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mhome\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mduarte-alex3\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mosiris-dev_2\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mosiris-dev\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mMS\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m'\u001b[39m[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m fld_data \u001b[38;5;241m=\u001b[39m \u001b[43mget_fld_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbase_dir\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[18], line 5\u001b[0m, in \u001b[0;36mget_fld_data\u001b[1;34m(base_dir, n_start, n_end, n_skip)\u001b[0m\n\u001b[0;32m      3\u001b[0m fld_data \u001b[38;5;241m=\u001b[39m {} \u001b[38;5;66;03m# data dictionary\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGetting fields... \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m fld_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mE1\u001b[39m\u001b[38;5;124m'\u001b[39m], dt, dx, t_arr, x_arr \u001b[38;5;241m=\u001b[39m \u001b[43mget_osiris_quantity_1d\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbase_dir\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mFLD\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mpart_AAA\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_start\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_end\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_skip\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m fld_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mE2\u001b[39m\u001b[38;5;124m'\u001b[39m], dt, dx, t_arr, x_arr \u001b[38;5;241m=\u001b[39m get_osiris_quantity_1d(base_dir \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFLD\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mpart_e2\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m'\u001b[39m[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], n_start, n_end, n_skip)\n\u001b[0;32m      7\u001b[0m fld_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mE3\u001b[39m\u001b[38;5;124m'\u001b[39m], dt, dx, t_arr, x_arr \u001b[38;5;241m=\u001b[39m get_osiris_quantity_1d(base_dir \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFLD\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mpart_e3\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m'\u001b[39m[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], n_start, n_end, n_skip)\n",
+      "Cell \u001b[1;32mIn[5], line 85\u001b[0m, in \u001b[0;36mget_osiris_quantity_1d\u001b[1;34m(quant_path, n_start, n_end, n_skip)\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_osiris_quantity_1d\u001b[39m(quant_path, n_start \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, n_end \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, n_skip \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m---> 85\u001b[0m     quant_list \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msort(np\u001b[38;5;241m.\u001b[39marray(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquant_path\u001b[49m\u001b[43m)\u001b[49m))\n\u001b[0;32m     86\u001b[0m     quant_list \u001b[38;5;241m=\u001b[39m quant_list[np\u001b[38;5;241m.\u001b[39mlogical_not(quant_list \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.DS_Store\u001b[39m\u001b[38;5;124m'\u001b[39m)]\n\u001b[0;32m     87\u001b[0m     quant_list \u001b[38;5;241m=\u001b[39m quant_list[n_start:n_end:n_skip]\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] O sistema não conseguiu localizar o caminho especificado: '\\\\\\\\wsl$\\\\Ubuntu-22.04\\\\home\\\\duarte-alex3\\\\osiris-dev_2\\\\osiris-dev\\\\MS\\\\FLD\\\\part_AA'"
+     ]
+    }
+   ],
    "source": [
-    "fld_data = "
+    "# base_dir = base_dir = r'\\\\wsl$\\Ubuntu-22.04\\home\\duarte-alex3\\osiris-dev_2\\osiris-dev\\MS\\\\'[:-1]\n",
+    "\n",
+    "fld_data = get_fld_data(base_dir)\n"
    ]
   }
  ],
